# JankRS

./: Cargo.nix  Cargo.toml  crate-hashes.json  flake.nix
src/: main.rs
src/gw_observors/message/: create.rs
src/request_guards/: authencitaced_user.rs  mod.rs
src/routes/: channel.rs  events.rs  guild.rs  home.rs  index.rs  login.rs  mod.rs  register.rs
static/css/: styles.css
templates/: base.html.tera  channel.html.tera  error.html.tera  guild.html.tera  home.html.tera  index.html.tera  login.html.tera  register.html.tera
